Selección de mascota aleatoria por parte del enemigo usando arreglos

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
         <h1 class=titulo>DINOPON! 🔥💧🌱</h1>
         <h2 class="subtitulo">Escoge tu dinomascota: </h2>
 
-        <div class ="tarjetas" id="contenedor-tarjetas">
-            
+        <div class ="tarjetas" id="contenedorTarjetas">     
         </div>
     
         <button id="boton-dinomascota">Seleccionar</button>
@@ -25,10 +24,7 @@
         <h1 class=titulo>DINOPON! 🔥💧🌱</h1>
         <h2 class="subtitulo">Escoge tu dino ataque: </h2>
 
-        <div class="tarjetas-ataques">
-            <button id="boton-fuego" class="boton-ataque">Fuego 🔥</button>
-            <button id="boton-agua" class="boton-ataque">Agua 💧</button>
-            <button id="boton-tierra" class="boton-ataque">Tierra 🌱</button>
+        <div id="contenedorAtaques" class="tarjetas-ataques">
         </div>
 
         <div id="mensajes">
