--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
         <button id="boton-dinomascota">Seleccionar</button>
     </section>
 
+    <section id="ver-mapa">
+        <h1 class="titulo">Recorre el mapa con tu dinopon</h1>
+        <canvas id="mapa"></canvas>
+        <button onmouseup="detenerMovimiento()" onmousedown="moverArriba()">Arriba</button>
+        <button onmouseup="detenerMovimiento()" onmousedown="moverIzquierda()">Izquierda</button>
+        <button onmouseup="detenerMovimiento()" onmousedown="moverAbajo()">Abajo</button>
+        <button onmouseup="detenerMovimiento()" onmousedown="moverDerecha()">Derecha</button>
+    </section>
+
     <section id="selecciona-ataque">
         <h1 class=titulo>DINOPON! 🔥💧🌱</h1>
         <h2 class="subtitulo">Escoge tu dino ataque: </h2>
